--- a/investment-properties.html
+++ b/investment-properties.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investment Property Mortgages Ontario | Rental & Multi-Unit Financing | The Mortgage Hunter</title>
     <meta name="description" content="Investment property mortgage options in Ontario. 20% minimum down, rental income calculations, portfolio lending limits. Expert broker guidance for real estate investors.">
@@ -288,6 +289,13 @@
     document.querySelector(".mobile-menu-btn").addEventListener("click", function() {
         document.querySelector(".nav").classList.toggle("nav-open");
         this.classList.toggle("active");
+    });
+    var dropdown = document.querySelector(".nav-dropdown > a");
+    dropdown.addEventListener("click", function(e) {
+        if (window.innerWidth <= 768) {
+            e.preventDefault();
+            this.parentElement.classList.toggle("dropdown-open");
+        }
     });
     </script>
 </body>
