--- a/new-to-canada.html
+++ b/new-to-canada.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New to Canada Mortgages Ontario | Newcomer & Immigrant Home Loans | The Mortgage Hunter</title>
     <meta name="description" content="Mortgage options for newcomers to Canada. Permanent residents, work permit holders, and new immigrants. Alternative documentation, no Canadian credit history required. Expert broker guidance.">
@@ -295,6 +296,13 @@
     document.querySelector(".mobile-menu-btn").addEventListener("click", function() {
         document.querySelector(".nav").classList.toggle("nav-open");
         this.classList.toggle("active");
+    });
+    var dropdown = document.querySelector(".nav-dropdown > a");
+    dropdown.addEventListener("click", function(e) {
+        if (window.innerWidth <= 768) {
+            e.preventDefault();
+            this.parentElement.classList.toggle("dropdown-open");
+        }
     });
     </script>
 </body>
