--- a/refinancing.html
+++ b/refinancing.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refinancing Your Mortgage Ontario | Access Equity, Lower Payments | The Mortgage Hunter</title>
     <meta name="description" content="Refinance your Ontario mortgage to access equity, consolidate debt, or lower your rate. 80% LTV max, stress test requirements, and break-even analysis. Expert broker guidance.">
@@ -297,6 +298,13 @@
     document.querySelector(".mobile-menu-btn").addEventListener("click", function() {
         document.querySelector(".nav").classList.toggle("nav-open");
         this.classList.toggle("active");
+    });
+    var dropdown = document.querySelector(".nav-dropdown > a");
+    dropdown.addEventListener("click", function(e) {
+        if (window.innerWidth <= 768) {
+            e.preventDefault();
+            this.parentElement.classList.toggle("dropdown-open");
+        }
     });
     </script>
 </body>
