--- a/renewals-switches.html
+++ b/renewals-switches.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mortgage Renewals & Switches Ontario | Don't Just Sign the Letter | The Mortgage Hunter</title>
     <meta name="description" content="Your mortgage renewal is your biggest opportunity to save. 60% of Canadians sign renewal letters without shopping. Average savings from switching: $13,857. Expert broker guidance.">
@@ -294,6 +295,13 @@
     document.querySelector(".mobile-menu-btn").addEventListener("click", function() {
         document.querySelector(".nav").classList.toggle("nav-open");
         this.classList.toggle("active");
+    });
+    var dropdown = document.querySelector(".nav-dropdown > a");
+    dropdown.addEventListener("click", function(e) {
+        if (window.innerWidth <= 768) {
+            e.preventDefault();
+            this.parentElement.classList.toggle("dropdown-open");
+        }
     });
     </script>
 </body>
