--- a/renovation-mortgages.html
+++ b/renovation-mortgages.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renovation Mortgages Ontario | Purchase Plus Improvements & Refinance for Renos | The Mortgage Hunter</title>
     <meta name="description" content="Finance your renovations through your mortgage. Purchase Plus Improvements, refinancing for renovations, and the new secondary suite program. Expert broker guidance.">
@@ -348,6 +349,13 @@
     document.querySelector(".mobile-menu-btn").addEventListener("click", function() {
         document.querySelector(".nav").classList.toggle("nav-open");
         this.classList.toggle("active");
+    });
+    var dropdown = document.querySelector(".nav-dropdown > a");
+    dropdown.addEventListener("click", function(e) {
+        if (window.innerWidth <= 768) {
+            e.preventDefault();
+            this.parentElement.classList.toggle("dropdown-open");
+        }
     });
     </script>
 </body>
